[package]
name = "proof-game"
version = "0.1.0"
authors = ["finegeometer <finegeometer@gmail.com>"]
edition = "2021"
description = "Can mathematical proof be turned into a puzzle game?"
readme = "README.md"
repository = "https://github.com/finegeometer/proof-game"

[lib]
crate-type = ["cdylib"]

[dependencies]
smallvec = {version = "1.10", features = ["union"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
egg = {version = "0.9", features = ["wasm-bindgen"]}
anyhow = "1"

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"

dodrio = "0.2"

[target.'cfg(target_family = "wasm")'.dependencies.web-sys]
version = "0.3.61"
# TODO: Exactly which features do I need?
features = [
  'CssStyleDeclaration',
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'HtmlElement',
  'HtmlCanvasElement',
  'HtmlParagraphElement',
  'HtmlInputElement',
  'InputEvent',
  'MouseEvent',
  'Node',
  'KeyboardEvent',
  'WheelEvent',
  'Window',
  'SvgElement',
  'SvgGraphicsElement',
  'SvgsvgElement',
  'SvgMatrix',
  'SvgPoint',
]