[package]
name = "proof-game"
version = "0.1.0"
authors = ["finegeometer <finegeometer@gmail.com>"]
edition = "2021"
description = "Can mathematical proof be turned into a puzzle game?"
readme = "README.md"
repository = "https://github.com/finegeometer/proof-game"

[lib]
crate-type = ["cdylib"]

[dependencies]
smallvec = {version = "1.10", features = ["union", "serde"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
egg = {version = "0.9", features = ["wasm-bindgen"]}
anyhow = "1"

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
wasm-bindgen-futures = "0.4.36"

async-channel = "1.8.0"
dodrio = "0.2"

[target.'cfg(target_family = "wasm")'.dependencies.web-sys]
version = "0.3.61"
# TODO: Exactly which features do I need?
features = [
  'BeforeUnloadEvent',
  'Blob',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'File',
  'FileList',
  'HtmlAnchorElement',
  'HtmlElement',
  'HtmlCanvasElement',
  'HtmlParagraphElement',
  'HtmlInputElement',
  'InputEvent',
  'Location',
  'MouseEvent',
  'Node',
  'KeyboardEvent',
  'RequestInit',
  'RequestCache',
  'Response',
  'SvgElement',
  'SvgGraphicsElement',
  'SvgsvgElement',
  'SvgMatrix',
  'SvgPoint',
  'Url',
  'WheelEvent',
  'Window',
]